<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/main_bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="测试" />

    <EditText
        android:id="@+id/main_edit"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="start"
        android:hint="内容" />


</LinearLayout>